--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -566,7 +566,20 @@ width: 76%;
 background: none;
 font-style: italic;
 }
-.search form input[type="submit"] {
+
+.search input{
+padding: 3px 0;
+font-weight:500;
+font-size: 1em;
+color:#A6A8AB;
+border:none;
+outline: none;
+width: 76%;
+background: none;
+font-style: italic;
+}
+
+.search button {
 background: url('../images/search.png')no-repeat  3px -2px;
 width: 20px;
 height: 20px;
@@ -1857,8 +1870,34 @@ h2.m_3 {
 
 .box img {
 	max-width: 100%;
-	height: auto;
+	height: 75%;
+	object-fit: cover;
 }
+
+/* .box { */
+  /* width: 33.33%; */
+  /* padding: 10px; */
+  /* box-sizing: border-box; */
+  /* text-align: center; */
+  /* overflow: hidden; */
+  /* position: relative;  */
+/* } */
+
+/* .box::before { */
+  /* content: ""; */
+  /* display: block; */
+  /* padding-top: 70%; /* 1:1 比例占位符 */ */
+/* } */
+
+/* .box img { */
+  /* position: absolute; */
+  /* top: 0; */
+  /* left: 0; */
+  /* width: 100%; */
+  /* height: 75%; */
+  /* object-fit: cover; */
+/* } */
+
 
 .box span {
 	display: block;
